<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="casual"
        android:text="@string/main_screen_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/about_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="140dp"
        android:elevation="4dp"
        android:fontFamily="casual"
        android:text="@string/about_btn_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/profile_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:elevation="4dp"
        android:fontFamily="casual"
        android:text="@string/profile_btn_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/about_button"
        app:layout_constraintStart_toStartOf="@+id/about_button"
        app:layout_constraintTop_toBottomOf="@+id/about_button" />
</androidx.constraintlayout.widget.ConstraintLayout>